<resources>
    <string name="app_name">TableTennisCounter</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player1Score">0</string>
    <string name="player2Score">0</string>
    <string name="round">Round 1</string>
    <string name="score">0 : 0</string>
    <string name="reset">Reset</string>
    <string name="point">Point</string>
</resources>
